# Numerical-methods-NSU-2

./: CMakeLists.txt  Numerical_methods_2.sln  main.cpp
Numerical_methods_2/: Numerical_methods_2.cpp  Numerical_methods_2.vcxproj  Numerical_methods_2.vcxproj.filters
Numerical_methods_2/CauchyProblem/: AdamsBashfortMethod.cpp  AdamsBashfortMethod.h  CauchyProblem.cpp  CauchyProblem.h  EulerMethod.cpp  EulerMethod.h  RungeKuttaMethod.cpp  RungeKuttaMethod.h
Numerical_methods_2/Debug/: AdamsBashfortMethod.nativecodeanalysis.sarif  CauchyProblem.nativecodeanalysis.sarif  CodeAnalysisResultManifest.txt  EulerMethod.nativecodeanalysis.sarif  Numerical_methods_2.exe.recipe  Numerical_methods_2.ilk  Numerical_methods_2.nativecodeanalysis.sarif  RungeKuttaMethod.nativecodeanalysis.sarif  graphic.nativecodeanalysis.sarif  graphic.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc143.idb
Numerical_methods_2/Graphic/: coordFragShader.glsl  dotsFragmentShader.glsl  fragmentShader.glsl  graphic.cpp  graphic.h  vertexShader.glsl
Numerical_methods_2/Integral/: Integral.cpp  Integral.h
Numerical_methods_2/NonlinearEquations/: bisection_method.cpp  bisection_method.h  info.txt  newton_method.cpp  newton_method.h  nonlinear_equation.cpp  nonlinear_equation.h  relaxation_method.cpp  relaxation_method.h  simple_iteration_method.cpp  simple_iteration_method.h
Numerical_methods_2/NonlinearSystems/: gauss_method.cpp  gauss_method.h  info.txt  newton_method_system.cpp  newton_method_system.h  nonlinear_system.cpp  nonlinear_system.h  simple_iterations_system.cpp  simple_iterations_system.h
methods/: bisection_method.cpp  bisection_method.h  newton_method.cpp  nonlinear_equation.h
nonlinear_eq_solving/: bisection_method.cpp  bisection_method.h  info.txt  newton_method.cpp  newton_method.h  nonlinear_equation.cpp  nonlinear_equation.h  relaxation_method.cpp  relaxation_method.h  simple_iteration_method.cpp  simple_iteration_method.h
nonlinear_eq_system_solving/: gauss_method.cpp  gauss_method.h  info.txt  newton_method_system.cpp  newton_method_system.h  nonlinear_system.cpp  nonlinear_system.h  simple_iterations_system.cpp  simple_iterations_system.h
nonlinear_equations_ex1/: CMakeLists.txt  main.cpp
(+17 files in other folders)
