cmake_minimum_required(VERSION 3.24)
project(Numerical_methods_NSU_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Numerical_methods_NSU_2 main.cpp nonlinear_eq_solving/bisection_method.cpp nonlinear_eq_solving/bisection_method.h nonlinear_eq_solving/simple_iteration_method.cpp nonlinear_eq_solving/simple_iteration_method.h nonlinear_eq_solving/relaxation_method.cpp nonlinear_eq_solving/relaxation_method.h nonlinear_eq_solving/newton_method.cpp nonlinear_eq_solving/newton_method.h nonlinear_eq_solving/nonlinear_equation.cpp nonlinear_eq_solving/nonlinear_equation.h nonlinear_eq_system_solving/simple_iterations_system.cpp nonlinear_eq_system_solving/simple_iterations_system.h nonlinear_eq_system_solving/nonlinear_system.cpp nonlinear_eq_system_solving/nonlinear_system.h nonlinear_eq_system_solving/newton_method_system.cpp nonlinear_eq_system_solving/newton_method_system.h nonlinear_eq_system_solving/gauss_method.cpp nonlinear_eq_system_solving/gauss_method.h)
